--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,4 +70,10 @@ textarea{min-height:120px;resize:vertical}
   .hero .grid{flex-direction:column}
   .nav-links{display:none}
   .mobile-nav{display:flex;gap:12px}
+
+  /* tamaño del logo */
+.logo {
+    width: 300px; /* puedes subirlo a 300 si quieres */
+    height: auto;
+}
 }
