--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,4 +72,4 @@ textarea{min-height:120px;resize:vertical}
   .mobile-nav{display:flex;gap:12px}
 }
   /* tamaño del logo */
-.logo {width: 400px; /* puedes subirlo a 300 si quieres */ height: 267px;}
+.logo {width: 400px; /* puedes subirlo a 300 si quieres */ height: auto;}
